[gd_scene load_steps=3 format=3 uid="uid://s68xwiuxe5p2"]

[ext_resource type="Script" uid="uid://dhr0gtwoikisw" path="res://scripts/player_info.gd" id="1_oojiu"]
[ext_resource type="Texture2D" uid="uid://c75d3ly0wcd8r" path="res://resources/portrait_neutral.png" id="2_yl0j5"]

[node name="PlayerInfo" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oojiu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Content" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="MarginContainer/Content"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Unknown"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Content"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Content"]
layout_mode = 2
texture = ExtResource("2_yl0j5")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Content/TextureRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Roll" type="Label" parent="MarginContainer/Content/TextureRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "This is a bug :/"
horizontal_alignment = 1

[node name="Word" type="Label" parent="MarginContainer/Content/TextureRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "This is a bug :/"
horizontal_alignment = 1

[node name="Reveal" type="Button" parent="MarginContainer/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Aufdecken"

[node name="Spacer" type="Control" parent="MarginContainer/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Pass" type="Button" parent="MarginContainer/Content"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Weitergeben"

[connection signal="pressed" from="MarginContainer/Content/Reveal" to="." method="_reveal_pressed"]
[connection signal="pressed" from="MarginContainer/Content/Pass" to="." method="_pass_pressed"]
